# dino

./: Cargo.toml  README.md  Trunk.toml  dino-92fb0830423f9072.js  index.html  serve.bash
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs  render.rs
